@@ -1,3 +1,1 @@
-DIST admin-tools-0.17.tar.xz 8640 SHA256 451d0cda75a8187aa3a031bfd87b23d52c90e0511ba369bdd4e88c958a6d831d SHA512 8d7ed2f82d16670a56b0eec35b41e0ab49beab5665e66ffc298ea1e63ed1ab086e6e99770cbe9f9b46a807542c451c42262422dc8bb5991ed26cc169dd1a2861 WHIRLPOOL fc9d39c1055abae78c47c418cc7afce56627a0d7b3207b0510d237466276a6b11da2cfccb8742a358faa5450af41534ba9825613eebe81c0806e59439c3098c4
-DIST admin-tools-0.18.tar.xz 9168 SHA256 f204d2477fc0765a7833e6c1a4ddeb56ed49a658c0679981f7107b437f1758b7 SHA512 302e37af7e1fb29e4dbf9625eab0faf428a5decc6d68537b3738a35ee4e8e4d4823206eaf9ae803aa8fb1dedd73203568f8d0043451af35bd2af7129add61c44 WHIRLPOOL 09ade3f22a93e024eb4c764c426020207267a4e785f90eac705837d251ad89a1310313d437036dd3564e8dba2bc8758edea557bd0c514b6a355c533a56fd5213
 DIST admin-tools-0.19.tar.xz 9208 SHA256 35ddf5fbff0c3c0ed19640b2a71fcec8bf355f1e2bc04d4ecc28390c9eb5b8f3 SHA512 e35fbe254e51021fdfb27708a10e8d0d43b0a5ffa8e3efa9ad1e2d2be71a04c1e6f50ebfebeb9f267a5c1d31281b4ac6c6656435d3161392d18b7de051ba332e WHIRLPOOL 0035b2497882b4c556098ba74a06c6ff83c576853c0e2cdf09029db0e1e1334b91dde95dafa20680c7a04b88487f8fe51de0fb8aafb37f32b35d97b6184ce0c4
