@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/admin-tools
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -admin-tools-0.17.ebuild,
+  -admin-tools-0.18.ebuild, admin-tools-0.19.ebuild, metadata.xml:
+  Drop old; bump to EAPI=5; fix license
 
 *admin-tools-0.19 (17 Jun 2012)
 
